fix: cloud deploy settings

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-# Local development (Podman)
+# Local development
+ENVIRONMENT=development
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=formapp
 DB_USER=postgres
 DB_PASSWORD=password
 
-# Production (Google Cloud Run)
-ENVIRONMENT=development
+# Production deployment
+ENVIRONMENT=production
 CLOUD_SQL_CONNECTION_NAME=project-id:region:instance-name
 SECRET_KEY=my-secret-key
