--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-    "pytest>=9.0.1",
-    "pytest-mock>=3.15.1",
-    "ruff>=0.14.7",
-]
+dev = ["pytest>=9.0.1", "pytest-mock>=3.15.1", "ruff>=0.14.7"]
 
 [tool.ruff]
 target-version = "py312"
